# CMF

./: .gitignore  README.md
cpp/: CMakeLists.txt  build.gradle  settings.gradle
cpp/gradle/wrapper/: gradle-wrapper.properties
cpp/include/CMF/: Envelope.h  EnvelopeSender.h  Registration.h
cpp/src/: Example.cpp
cpp/src/CMF/: Envelope.cpp  Envelope.h  Example.cpp
cpp/src/cmf-bus-api/src/main/headers/: EnvelopeReceiver.h
cpp/src_test/: CMakeLists.txt  envelope_test.cpp
dotnet/: README.md  cmf.examples.sln  cmf.sln
dotnet/docs/: cmf.docs.shfbproj
dotnet/examples/cmf.examples.duplex/: App.config  Extensions.cs  Program.cs  cmf.examples.duplex.csproj
dotnet/examples/cmf.examples.messages/: EventTypeB.cs  ExampleResponse.cs  cmf.examples.messages.csproj
dotnet/source/: GlobalAssemblyInfo.cs
dotnet/source/cmf.bus/: Envelope.cs  EnvelopeHeaderConstants.cs  Extensions.cs  IEnvelopeBus.cs  IEnvelopeReceiver.cs  IEnvelopeSender.cs  IRegistration.cs  cmf.bus.3.1.3.0.nupkg  cmf.bus.csproj  cmf.bus.nuspec
dotnet/source/cmf.bus.berico/: DefaultEnvelopeBus.cs  EnvelopeContext.cs  IEnvelopeProcessor.cs  IInboundEnvelopeProcessor.cs  cmf.bus.berico.csproj
dotnet/source/cmf.eventing/: IEventBus.cs  (+9 more)
java/: orig-pom.xml  pom.xml
java/cmf-bus-api/: pom.xml
java/cmf-bus-default/: pom.xml
java/cmf-bus-default-rabbit/: pom.xml
java/cmf-bus-default-security/: pom.xml
java/cmf-eventing-api/: pom.xml
java/cmf-eventing-default/: pom.xml
java/cmf-examples/: pom.xml
javascript/amqp/: topology.coffee  transport.coffee
javascript/core/: exceptions.coffee
node/: afluent.coffee  config.coffee  envelope-bus.coffee  envelope.coffee  event-bus.coffee  package.json  test.coffee
node/examples/: example-amqp-consumer.coffee  example-amqp-publisher.coffee  example-amqp.coffee
node/test/: envelope-bus.js
node/transports/: transport-amqp.coffee  transport-inmemory.coffee
services/ldap-provider/: config.coffee  ldap-server.coffee
source/cmf.bus.gui/: pom.xml  rabbit.osd.mil.keyStore
source/java/: pom.xml
(+661 files in other folders)
